@@ -871,20 +871,20 @@ function groups_get_group_row($id_group, $group_all, $group, &$printed_groups) {
 	echo "</td>";
 	
 	// Status
-	echo "<td style='text-align:center;'>" . $status_image . "</td>";
+	// echo "<td style='text-align:center;'>" . $status_image . "</td>";
 	
 	// Group name
 	echo "<td class='' style='font-weight: bold; font-size: 12px;'>&nbsp;&nbsp;";
-	echo $group['prefix'] . ui_print_group_icon ($id_group, true, "groups_small", 'font-size: 7.5pt');
+	//echo $group['prefix'] . ui_print_group_icon ($id_group, true, "groups_small", 'font-size: 7.5pt');
 	echo "&nbsp;<a class='' href='index.php?sec=estado&sec2=operation/agentes/estado_agente&group_id=$id_group'>";
-	echo ui_print_truncate_text($group['name']);
+	echo $group['prefix'] . ui_print_truncate_text($group['name']);
 	echo "</a>";
 	echo "</td>";
 	
 	// Total agents
 	echo "<td class='group_view_data $group_class' class='group_view_data' style='font-weight: bold; font-size: 18px; text-align: center;'>";
 	if ($data["total_agents"] > 0)
-		echo "<a class='group_view_data' style='font-weight: bold; font-size: 18px; text-align: center;' 
+		echo "<a class='group_view_data $group_class' style='font-weight: bold; font-size: 18px; text-align: center;' 
 			href='index.php?sec=estado&sec2=operation/agentes/estado_agente&group_id=$id_group'>";
 	
 	//Total agent field given by function reporting_get_group_stats return the number of agents
@@ -911,7 +911,7 @@ function groups_get_group_row($id_group, $group_all, $group, &$printed_groups) {
 	// Agents unknown
 	if ($data["agents_unknown"] > 0) {
 		echo "<td class='group_view_data group_view_data_unk $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'>";
-		echo "<a class='group_view_data group_view_data_unk' style='font-weight: bold; font-size: 18px; text-align: center;' 
+		echo "<a class='group_view_data group_view_data_unk $group_class' style='font-weight: bold; font-size: 18px; text-align: center;' 
 			href='index.php?sec=estado&sec2=operation/agentes/estado_agente&group_id=$id_group&status=3'>";
 		echo $data["agents_unknown"];
 		echo "</a>";
@@ -924,7 +924,7 @@ function groups_get_group_row($id_group, $group_all, $group, &$printed_groups) {
 	// Monitors Unknown
 	if ($data["monitor_unknown"] > 0) {
 		echo "<td class='group_view_data group_view_data_unk $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'>";
-		echo "<a class='group_view_data' style='font-weight: bold; font-size: 18px; color: #666; text-align: center;'
+		echo "<a class='group_view_data group_view_data_unk $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'
 			href='index.php?sec=estado&sec2=operation/agentes/status_monitor&ag_group=$id_group&status=3'>";
 		echo $data["monitor_unknown"];
 		echo "</a>";
@@ -938,7 +938,7 @@ function groups_get_group_row($id_group, $group_all, $group, &$printed_groups) {
 	// Monitors Not Init
 	if ($data["monitor_not_init"] > 0) {
 		echo "<td class='group_view_data group_view_data_unk $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'>";
-		echo "<a class='group_view_data group_view_data_unk' style='font-weight: bold; font-size: 18px; text-align: center;'
+		echo "<a class='group_view_data group_view_data_unk $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'
 			href='index.php?sec=estado&sec2=operation/agentes/status_monitor&ag_group=$id_group&status=5'>";
 		echo $data["monitor_not_init"];
 		echo "</a>";
@@ -952,7 +952,7 @@ function groups_get_group_row($id_group, $group_all, $group, &$printed_groups) {
 	// Monitors OK
 	echo "<td class='group_view_data group_view_data_ok $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'>";
 	if ($data["monitor_ok"] > 0) {
-		echo "<a class='group_view_data group_view_data_unk' style='font-weight: bold; font-size: 18px; text-align: center;' href='index.php?sec=estado&sec2=operation/agentes/status_monitor&ag_group=$id_group&status=0'>";
+		echo "<a class='group_view_data group_view_data_unk $group_class' style='font-weight: bold; font-size: 18px; text-align: center;' href='index.php?sec=estado&sec2=operation/agentes/status_monitor&ag_group=$id_group&status=0'>";
 		echo $data["monitor_ok"];
 		echo "</a>";
 	}
@@ -964,7 +964,7 @@ function groups_get_group_row($id_group, $group_all, $group, &$printed_groups) {
 	// Monitors Warning
 	if ($data["monitor_warning"] > 0) {
 		echo "<td class='group_view_data group_view_data_warn $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'>";
-		echo "<a class='group_view_data group_view_data_warn' class='group_view_data_unk' style='font-weight: bold; font-size: 18px; text-align: center;'
+		echo "<a class='group_view_data group_view_data_warn $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'
 			href='index.php?sec=estado&sec2=operation/agentes/status_monitor&ag_group=$id_group&status=1'>";
 		echo $data["monitor_warning"];
 		echo "</a>";
@@ -977,7 +977,7 @@ function groups_get_group_row($id_group, $group_all, $group, &$printed_groups) {
 	// Monitors Critical
 	if ($data["monitor_critical"] > 0) {
 		echo "<td class='group_view_data group_view_data_crit $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'>";
-		echo "<a class='group_view_data group_view_data_crit' style='font-weight: bold; font-size: 18px; text-align: center;'
+		echo "<a class='group_view_data group_view_data_crit $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'
 			href='index.php?sec=estado&sec2=operation/agentes/status_monitor&ag_group=$id_group&status=2'>";
 		echo $data["monitor_critical"];
 		echo "</a>";
@@ -989,7 +989,7 @@ function groups_get_group_row($id_group, $group_all, $group, &$printed_groups) {
 	// Alerts fired
 	if ($data["monitor_alerts_fired"] > 0) {
 		echo "<td class='group_view_data group_view_data_alrm $group_class' style='font-weight: bold; font-size: 18px;  text-align: center;'>";
-		echo "<a class='group_view_data group_view_data_alrm' style='font-weight: bold; font-size: 18px; text-align: center;'
+		echo "<a class='group_view_data group_view_data_alrm $group_class' style='font-weight: bold; font-size: 18px; text-align: center;'
 			href='index.php?sec=estado&sec2=operation/agentes/alerts_status&ag_group=$id_group&filter=fired'>";
 		echo $data["monitor_alerts_fired"];
 		echo "</a>";
