@@ -2276,6 +2276,11 @@ div.cellBig {
 	-khtml-opacity: 0.8;
 }
 
+
+tr.group_view_data, .group_view_data {
+	color: #fff;
+}
+
 tr.group_view_crit, .group_view_crit {
 	background-color:  #FA3030;
 }
@@ -2289,10 +2294,11 @@ tr.group_view_ok, .group_view_ok {
 
 tr.group_view_warn, .group_view_warn, tr.group_view_warn.a, a.group_view_warn, tr.a.group_view_warn {
 	background-color: #F5E535;
+	color: #3F3F3F !important;
 }
 
 a.group_view_warn {
-	color: #111 !important;
+	color: #3F3F3F !important;
 }
 
 tr.group_view_alrm, .group_view_alrm {
@@ -2301,10 +2307,6 @@ tr.group_view_alrm, .group_view_alrm {
 
 tr.group_view_unk, .group_view_unk {
 	background-color: #C4C4C4;
-}
-
-tr.group_view_data, .group_view_data {
-	color: #fff !important;
 }
 
 /* classes for event priorities. Sits now in functions.php */
