@@ -1,3 +1,11 @@
+2013-06-04  Sergio Martin <sergio.martin@artica.es>
+
+	* include/styles/pandora.css
+	include/functions_groups.php
+	operation/agentes/group_view.php: Delete status column
+	and group image from groups view. Another visual fixes
+	were done
+
 2013-06-03  Sergio Martin <sergio.martin@artica.es>
 
 	* include/styles/pandora.css
